--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "sharp": "^0.33.1",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1"
