--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -23,6 +25,7 @@
     "nodemailer": "^6.9.8",
     "sharp": "^0.33.1",
     "slugify": "^1.6.6",
+    "stripe": "^14.13.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
