--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production node server.js "
+    "start:prod": "NODE_ENV=production node server.js ",
+    "start": "node server.js "
   },
   "keywords": [],
   "author": "",
